# tips

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: analysis.yaml  ci.yaml  docs.yaml
code_quality/: index.html
docker/: index.html
docs/: code_quality.md  docker.md  docs.md  env.md  git.md  index.html
env/: index.html
git/: index.html
search/: search_index.json
src/: __init__.py
